test/2/type/sub-sig-dom-width.err
test/2/type/sub-sig-dom-width.ploy:1:3-12: type error: annotated: actual struct has 2 fields; expected 3. actual type: (Int Int)
| f:(Int Int)%Void = fn (Int Int Int)%Void;
    ~~~~~~~~~
test/2/type/sub-sig-dom-width.ploy:1:23-36: note: expected type: (Int Int Int)
| f:(Int Int)%Void = fn (Int Int Int)%Void;
                        ~~~~~~~~~~~~~
